# bazel-book-examples

./: LICENSE
snippets/glob-retraction/: MODULE.bazel  meta.yaml
snippets/glob-retraction/after/: README.txt
snippets/glob-retraction/after/nested/: BUILD.bazel  note.txt
snippets/glob-retraction/before/: BUILD.bazel  README.txt
snippets/glob-retraction/before/nested/: note.txt
snippets/output-path-mirroring/: MODULE.bazel  meta.yaml
snippets/output-path-mirroring/lib/util/: BUILD.bazel  Helpers.java
snippets/output-path-mirroring/tests/api/: BUILD.bazel  api_test.cc
snippets/target-patterns/: MODULE.bazel  meta.yaml
snippets/target-patterns/app/: BUILD.bazel  Lib.java  LibTest.java  Main.java
snippets/testonly-error/: MODULE.bazel  meta.yaml
snippets/testonly-error/app/: BUILD.bazel  Main.java
snippets/testonly-error/testutil/: BUILD.bazel  TestHelpers.java
snippets/visibility-error/: MODULE.bazel  meta.yaml
snippets/visibility-error/app/: BUILD.bazel  Main.java
snippets/visibility-error/lib/: BUILD.bazel  Internal.java
